fix: context menu position show scrollbar

--- a/src/components/ContextMenu/context-menu.scss
+++ b/src/components/ContextMenu/context-menu.scss
@@ -2,6 +2,8 @@
 
 .drawer-context-menu {
   position: absolute;
+  top: 0;
+  left: 0;
   visibility: hidden;
   background-color: #fff;
   border-radius: $radius;
